# Crypto-Market-Alerts

./: .gitignore  Dockerfile  README.md  binance_keys.yaml  crypto_signal.py  gotify_settings.yaml  pyproject.toml  readme.md  requirements.txt  top_50.yaml
signal_generators/: altcoin_index.py  binance_helpers.py  choppy_index.py
